--- a/index.html
+++ b/index.html
@@ -97,22 +97,22 @@
                     
                     <ul class="navbar-nav navbar-user ml-auto align-items-center text-nowrap">
                         <li class="nav-item">
-                            <a class="nav-link" href="subscribe.html" aria-label="Subscribe">
+                            <a class="nav-link" href="contact.html" aria-label="Contact Us">
                                 <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
-                                    <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                                    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                                    <polyline points="22,6 12,13 2,6"></polyline>
                                 </svg>
-                                <span class="d-none d-lg-inline">Subscribe</span>
+                                <span class="d-none d-lg-inline">Contact</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-login" href="login.html">
-                                Login
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link btn-register" href="register.html">
-                                Sign Up
+                            <a class="nav-link" href="about.html" aria-label="About Us">
+                                <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <path d="M12 16v-4"></path>
+                                    <path d="M12 8h.01"></path>
+                                </svg>
+                                <span class="d-none d-lg-inline">About</span>
                             </a>
                         </li>
                     </ul>
