Update index.html and movies.html with latest changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta http-equiv="cleartype" content="on">
     <meta name="google-adsense-account" content="ca-pub-1904736753681797">
+    <meta name="google-site-verification" content="ZETgIS2RUYfcmNN7z0_OCZ7CjNP4LbfPI-F1MD7uiyY" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.png">
