--- a/movies.html
+++ b/movies.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Luganda Movies - Browse VJ Translated Movies</title>
+    <meta name="<meta name="google-site-verification" content="ZETgIS2RUYfcmNN7z0_OCZ7CjNP4LbfPI-F1MD7uiyY" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Browse thousands of Luganda translated movies. Watch the latest VJ translations and classic films in HD quality.">
