--- a/index.html
+++ b/index.html
@@ -331,10 +331,9 @@
                                         <div class="featured-video-container" style="background: #1a1a1a; border-radius: 8px; padding: 20px; margin-bottom: 30px;">
                                             <div class="video-wrapper" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px;">
                                                 <iframe 
-                                                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                                                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;"
                                                     src="https://www.youtube.com/embed/OsYMprBZR_g?si=2u7Fmdsm7VJhjlce" 
                                                     title="YouTube video player" 
-                                                    frameborder="0" 
                                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                                                     referrerpolicy="strict-origin-when-cross-origin" 
                                                     allowfullscreen>
