Fix button accessibility issues across all HTML pages - Added aria-label and title attributes to all buttons with only SVG icons - Fixed modal close buttons in index.html, movies.html, series.html - Fixed pagination buttons in movies.html and series.html - Fixed video player control buttons in player.html - Fixed action buttons in player.html - Added proper label associations for select elements in series.html

--- a/movies.html
+++ b/movies.html
@@ -181,7 +181,7 @@
             <div class="app-wrapper">
                 <!-- Sidebar -->
                 <div class="app-aside nav-aside" id="aside">
-                    <button class="modal-close d-md-none d-block" data-dismiss="modal">
+                    <button class="modal-close d-md-none d-block" data-dismiss="modal" aria-label="Close menu" title="Close menu">
                         <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <line x1="18" y1="6" x2="6" y2="18"></line>
                             <line x1="6" y1="6" x2="18" y2="18"></line>
@@ -321,17 +321,17 @@
 
                             <!-- Pagination -->
                             <div class="pagination">
-                                <button class="page-btn" id="prevPage" disabled>
+                                <button class="page-btn" id="prevPage" disabled aria-label="Previous page" title="Previous page">
                                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <polyline points="15 18 9 12 15 6"></polyline>
                                     </svg>
                                 </button>
-                                <button class="page-btn active">1</button>
-                                <button class="page-btn">2</button>
-                                <button class="page-btn">3</button>
-                                <button class="page-btn">4</button>
-                                <button class="page-btn">5</button>
-                                <button class="page-btn" id="nextPage">
+                                <button class="page-btn active" aria-label="Page 1" title="Page 1">1</button>
+                                <button class="page-btn" aria-label="Page 2" title="Page 2">2</button>
+                                <button class="page-btn" aria-label="Page 3" title="Page 3">3</button>
+                                <button class="page-btn" aria-label="Page 4" title="Page 4">4</button>
+                                <button class="page-btn" aria-label="Page 5" title="Page 5">5</button>
+                                <button class="page-btn" id="nextPage" aria-label="Next page" title="Next page">
                                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <polyline points="9 18 15 12 9 6"></polyline>
                                     </svg>
