Add MyVJ-inspired features: lazy loading, video preview on hover, watch progress tracking - Implemented lazy loading for images with IntersectionObserver API - Added Video.js player integration for enhanced video playback - Created hover video preview effect for movie cards - Added watch progress bar UI components - Integrated Video.js CSS and JS libraries - Fixed button accessibility issues across all HTML pages - Added comprehensive MyVJ analysis and feature documentation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+    
+    <!-- Video.js for enhanced video playback -->
+    <link href="https://vjs.zencdn.net/8.16.1/video-js.css" rel="stylesheet">
 
     <!-- Global JS Vars -->
     <script type="text/javascript">
@@ -657,7 +660,11 @@
     </div>
 
     <!-- JavaScript -->
+    <!-- Video.js Library -->
+    <script src="https://vjs.zencdn.net/8.16.1/video.min.js"></script>
+    
     <script src="js/luganda-movies-api.js"></script>
+    <script src="js/myvj-features.js"></script>
     <script src="js/main.js"></script>
     <script>
         // Load Luganda movies on page load
