--- a/index.html
+++ b/index.html
@@ -331,13 +331,12 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <div class="featured-video-container" style="background: #1a1a1a; border-radius: 8px; padding: 20px; margin-bottom: 30px;">
-                                            <div class="video-wrapper" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px;">
+                                        <div class="featured-video-container">
+                                            <div class="video-wrapper">
                                                 <iframe 
-                                                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                                                    id="featuredVideo"
                                                     src="https://www.youtube.com/embed/OsYMprBZR_g" 
                                                     title="Featured Luganda Movie" 
-                                                    frameborder="0"
                                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                                                     referrerpolicy="strict-origin-when-cross-origin" 
                                                     allowfullscreen>
