Add featured movie card for Song of the Assassins by VJ Ice P with TMDB data

--- a/index.html
+++ b/index.html
@@ -324,23 +324,83 @@
                                 </div>
                             </div>
 
-                            <!-- Featured Video Section -->
+                            <!-- Featured Movie Section -->
                             <div class="app-section">
                                 <div class="app-heading">
-                                    <div class="text">Featured Movie</div>
+                                    <div class="text">Featured Movie - VJ Ice P</div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <div class="featured-video-container">
-                                            <div class="video-wrapper">
-                                                <iframe 
-                                                    id="featuredVideo"
-                                                    src="https://www.youtube.com/embed/OsYMprBZR_g" 
-                                                    title="Featured Luganda Movie" 
-                                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                                    referrerpolicy="strict-origin-when-cross-origin" 
-                                                    allowfullscreen>
-                                                </iframe>
+                                        <div class="featured-movie-card">
+                                            <div class="featured-movie-backdrop">
+                                                <img src="https://image.tmdb.org/t/p/original/xXBnM6uSTk6qqCf0SRZKXcga9Ba.jpg" alt="Song of the Assassins Backdrop" loading="lazy">
+                                                <div class="featured-movie-overlay"></div>
+                                            </div>
+                                            <div class="featured-movie-content">
+                                                <div class="featured-movie-poster">
+                                                    <img src="https://image.tmdb.org/t/p/w500/gWt6vVKJYmYP7aqIkN7GqNnLq5K.jpg" alt="Song of the Assassins Poster">
+                                                    <div class="featured-quality-badge">HD</div>
+                                                </div>
+                                                <div class="featured-movie-info">
+                                                    <div class="featured-vj-badge">
+                                                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                                            <circle cx="12" cy="7" r="4"></circle>
+                                                        </svg>
+                                                        VJ Ice P
+                                                    </div>
+                                                    <h2 class="featured-movie-title">Song of the Assassins</h2>
+                                                    <div class="featured-movie-meta">
+                                                        <span class="meta-item">
+                                                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                                                <line x1="16" y1="2" x2="16" y2="6"></line>
+                                                                <line x1="8" y1="2" x2="8" y2="6"></line>
+                                                                <line x1="3" y1="10" x2="21" y2="10"></line>
+                                                            </svg>
+                                                            2022
+                                                        </span>
+                                                        <span class="meta-item">
+                                                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                                <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                                                            </svg>
+                                                            7.2/10
+                                                        </span>
+                                                        <span class="meta-item">Action, Adventure</span>
+                                                        <span class="meta-item">
+                                                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                                <circle cx="12" cy="12" r="10"></circle>
+                                                                <polyline points="12 6 12 12 16 14"></polyline>
+                                                            </svg>
+                                                            2h 7min
+                                                        </span>
+                                                    </div>
+                                                    <p class="featured-movie-description">
+                                                        After completing his training, an elite young assassin embarks on his first mission and is quickly ensnared in an intricate plot laid by powerful people pulling strings from the shadows. Upon failing to complete the assignment, he is forced to go on the run—from the government and rival assassin groups alike—as he seeks to unmask the players behind the conspiracy.
+                                                    </p>
+                                                    <div class="featured-movie-actions">
+                                                        <a href="https://www.youtube.com/watch?v=OsYMprBZR_g" target="_blank" class="btn-play-featured">
+                                                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                                                                <polygon points="5 3 19 12 5 21 5 3"></polygon>
+                                                            </svg>
+                                                            Watch Now
+                                                        </a>
+                                                        <button class="btn-add-list">
+                                                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                                <line x1="12" y1="5" x2="12" y2="19"></line>
+                                                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                                                            </svg>
+                                                            My List
+                                                        </button>
+                                                        <button class="btn-info">
+                                                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                                <circle cx="12" cy="12" r="10"></circle>
+                                                                <path d="M12 16v-4"></path>
+                                                                <path d="M12 8h.01"></path>
+                                                            </svg>
+                                                        </button>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
