Fix button accessibility - add title and aria-label attributes

--- a/index.html
+++ b/index.html
@@ -385,14 +385,14 @@
                                                             </svg>
                                                             Watch Now
                                                         </button>
-                                                        <button class="btn-add-list">
+                                                        <button class="btn-add-list" title="Add to My List" aria-label="Add to My List">
                                                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                                                 <line x1="12" y1="5" x2="12" y2="19"></line>
                                                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                                             </svg>
                                                             My List
                                                         </button>
-                                                        <button class="btn-info">
+                                                        <button class="btn-info" title="More Information" aria-label="More Information">
                                                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                                                 <circle cx="12" cy="12" r="10"></circle>
                                                                 <path d="M12 16v-4"></path>
