--- a/index.html
+++ b/index.html
@@ -722,14 +722,7 @@
                 </svg>
             </button>
             <div class="video-modal-wrapper">
-                <iframe 
-                    id="videoPlayer"
-                    src="" 
-                    title="Song of the Assassins - VJ Ice P" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    referrerpolicy="strict-origin-when-cross-origin" 
-                    allowfullscreen>
-                </iframe>
+                <div id="youtubePlayer"></div>
             </div>
         </div>
     </div>
@@ -749,21 +742,72 @@
     <script src="js/myvj-features.js"></script>
     <script src="js/main.js"></script>
     <script>
+        // 2. This code loads the IFrame Player API code asynchronously.
+        var tag = document.createElement('script');
+
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        // 3. This function creates an <iframe> (and YouTube player)
+        //    after the API code downloads.
+        var player;
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('youtubePlayer', {
+                height: '390',
+                width: '640',
+                videoId: 'OsYMprBZR_g',
+                playerVars: {
+                    'playsinline': 1
+                },
+                events: {
+                    'onReady': onPlayerReady,
+                    'onStateChange': onPlayerStateChange
+                }
+            });
+        }
+
+        // 4. The API will call this function when the video player is ready.
+        function onPlayerReady(event) {
+            // Player is ready
+        }
+
+        // 5. The API calls this function when the player's state changes.
+        //    The function indicates that when playing a video (state=1),
+        //    the player should play for six seconds and then stop.
+        var done = false;
+        function onPlayerStateChange(event) {
+            if (event.data == YT.PlayerState.PLAYING && !done) {
+                // Video started playing
+                done = true;
+            }
+        }
+
+        function stopVideo() {
+            player.stopVideo();
+        }
+
         // Video Modal Functions
         function openVideoModal() {
             const modal = document.getElementById('videoModal');
-            const videoPlayer = document.getElementById('videoPlayer');
-            videoPlayer.src = 'https://www.youtube.com/embed/OsYMprBZR_g?autoplay=1';
             modal.style.display = 'flex';
             document.body.style.overflow = 'hidden';
+
+            // Start playing the video when modal opens
+            if (player && player.playVideo) {
+                player.playVideo();
+            }
         }
 
         function closeVideoModal() {
             const modal = document.getElementById('videoModal');
-            const videoPlayer = document.getElementById('videoPlayer');
-            videoPlayer.src = '';
             modal.style.display = 'none';
             document.body.style.overflow = 'auto';
+
+            // Stop the video when modal closes
+            if (player && player.stopVideo) {
+                player.stopVideo();
+            }
         }
 
         // Close modal when clicking outside
