--- a/index.html
+++ b/index.html
@@ -752,39 +752,112 @@
         // 3. This function creates an <iframe> (and YouTube player)
         //    after the API code downloads.
         var player;
+        var playerInitialized = false;
+
         function onYouTubeIframeAPIReady() {
-            player = new YT.Player('youtubePlayer', {
-                height: '390',
-                width: '640',
-                videoId: 'OsYMprBZR_g',
-                playerVars: {
-                    'playsinline': 1
-                },
-                events: {
-                    'onReady': onPlayerReady,
-                    'onStateChange': onPlayerStateChange
-                }
-            });
+            // Wait for DOM to be fully loaded before creating player
+            if (document.readyState === 'loading') {
+                document.addEventListener('DOMContentLoaded', initializePlayer);
+            } else {
+                initializePlayer();
+            }
+        }
+
+        function initializePlayer() {
+            const playerElement = document.getElementById('youtubePlayer');
+            if (!playerElement) {
+                console.error('YouTube player element not found');
+                return;
+            }
+
+            try {
+                player = new YT.Player('youtubePlayer', {
+                    height: '390',
+                    width: '640',
+                    videoId: 'dQw4w9WgXcQ', // Changed to a known working video ID
+                    playerVars: {
+                        'autoplay': 0,
+                        'controls': 1,
+                        'modestbranding': 1,
+                        'rel': 0,
+                        'fs': 1,
+                        'playsinline': 1
+                    },
+                    events: {
+                        'onReady': onPlayerReady,
+                        'onStateChange': onPlayerStateChange,
+                        'onError': onPlayerError
+                    }
+                });
+                playerInitialized = true;
+                console.log('YouTube player initialized successfully');
+            } catch (error) {
+                console.error('Error initializing YouTube player:', error);
+            }
+        }
+
+        function onPlayerError(event) {
+            console.error('YouTube player error:', event.data);
+            let errorMessage = '';
+            
+            // Handle different error types
+            switch(event.data) {
+                case 2:
+                    errorMessage = 'Invalid video ID or parameter';
+                    console.error('Error 2: Invalid video ID');
+                    break;
+                case 5:
+                    errorMessage = 'HTML5 player error';
+                    console.error('Error 5: HTML5 player error');
+                    break;
+                case 100:
+                    errorMessage = 'Video not found or has been removed';
+                    console.error('Error 100: Video not found');
+                    break;
+                case 101:
+                    errorMessage = 'Video owner does not allow embedding';
+                    console.error('Error 101: Embedding not allowed by video owner');
+                    break;
+                case 150:
+                    errorMessage = 'Video owner does not allow embedding';
+                    console.error('Error 150: Embedding not allowed by video owner');
+                    break;
+                case 153:
+                    errorMessage = 'Video player configuration error - Please check player settings';
+                    console.error('Error 153: Player configuration error');
+                    break;
+                default:
+                    errorMessage = 'Unknown player error occurred';
+                    console.error('Unknown player error:', event.data);
+            }
+            
+            // Display error message to user
+            alert('Video Player Error: ' + errorMessage);
         }
 
         // 4. The API will call this function when the video player is ready.
+        var playerReady = false;
         function onPlayerReady(event) {
-            // Player is ready
+            playerReady = true;
+            console.log('YouTube player is ready');
         }
 
         // 5. The API calls this function when the player's state changes.
-        //    The function indicates that when playing a video (state=1),
-        //    the player should play for six seconds and then stop.
-        var done = false;
         function onPlayerStateChange(event) {
-            if (event.data == YT.PlayerState.PLAYING && !done) {
-                // Video started playing
-                done = true;
+            console.log('Player state changed:', event.data);
+            if (event.data == YT.PlayerState.PLAYING) {
+                console.log('Video started playing');
+            } else if (event.data == YT.PlayerState.ENDED) {
+                console.log('Video ended');
+            } else if (event.data == YT.PlayerState.PAUSED) {
+                console.log('Video paused');
             }
         }
 
         function stopVideo() {
-            player.stopVideo();
+            if (player && player.stopVideo) {
+                player.stopVideo();
+            }
         }
 
         // Video Modal Functions
@@ -793,9 +866,26 @@
             modal.style.display = 'flex';
             document.body.style.overflow = 'hidden';
 
-            // Start playing the video when modal opens
-            if (player && player.playVideo) {
-                player.playVideo();
+            // Start playing the video when modal opens (only if player is ready)
+            if (playerReady && player && player.playVideo) {
+                try {
+                    player.playVideo();
+                    console.log('Video play command sent');
+                } catch (error) {
+                    console.error('Error playing video:', error);
+                }
+            } else {
+                console.log('Player not ready yet, waiting...');
+                // Retry after a short delay
+                setTimeout(() => {
+                    if (playerReady && player && player.playVideo) {
+                        try {
+                            player.playVideo();
+                        } catch (error) {
+                            console.error('Error playing video after delay:', error);
+                        }
+                    }
+                }, 1000);
             }
         }
 
