--- a/movies.html
+++ b/movies.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="assets/images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/trailer-player.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     
     <!-- Google AdSense -->
@@ -362,6 +363,8 @@
         </svg>
     </div>
 
+    <script src="js/tmdb-api.js"></script>
+    <script src="js/trailer-player.js"></script>
     <script src="js/luganda-movies-api.js"></script>
     <script src="js/main.js"></script>
     <script>
@@ -402,6 +405,24 @@
                         <div class="list-caption">
                             <a href="player.html?id=${movie._id}" class="list-title">${movie.originalTitle}</a>
                             <a href="#" class="list-category">VJ ${movie.vjName}</a>
+                        </div>
+                        <div class="movie-card-actions always-visible">
+                            <a href="player.html?id=${movie._id}" class="btn-play">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                    <polygon points="5 3 19 12 5 21 5 3"></polygon>
+                                </svg>
+                                Play Movie
+                            </a>
+                            ${movie.tmdbId ? `
+                            <button class="btn-trailer" 
+                                    onclick="trailerPlayer.playTrailer(${movie.tmdbId}, '${movie.originalTitle.replace(/'/g, "\\'")}')"
+                                    aria-label="Watch trailer for ${movie.originalTitle}">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <polygon points="5 3 19 12 5 21 5 3"></polygon>
+                                </svg>
+                                Watch Trailer
+                            </button>
+                            ` : ''}
                         </div>
                     </div>
                 `;
