# Commit message based on the task description and changes made:
doc...

--- a/movies.html
+++ b/movies.html
@@ -366,6 +366,7 @@
     <script src="js/tmdb-api.js"></script>
     <script src="js/trailer-player.js"></script>
     <script src="js/luganda-movies-api.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
     <script>
         // Use sample Luganda movies data
