--- a/register.html
+++ b/register.html
@@ -425,6 +425,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
     <script>
         function togglePassword(inputId, iconId) {
