--- a/player.html
+++ b/player.html
@@ -490,6 +490,7 @@
     <!-- HLS.js for streaming support -->
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
     <script src="js/uganda-tv-api.js"></script>
     <script>
