Connect frontend to Railway backend - Add centralized API config and update CORS settings

--- a/index.html
+++ b/index.html
@@ -738,6 +738,8 @@
     <!-- Video.js Library -->
     <script src="https://vjs.zencdn.net/8.16.1/video.min.js"></script>
     
+    <!-- API Configuration (must load first) -->
+    <script src="js/config.js"></script>
     <script src="js/luganda-movies-api.js"></script>
     <script src="js/myvj-features.js"></script>
     <script src="js/main.js"></script>
