--- a/login.html
+++ b/login.html
@@ -347,6 +347,8 @@
         </div>
     </div>
 
+    <!-- API Configuration (must load first) -->
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
     <script>
