--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                                                         After completing his training, an elite young assassin embarks on his first mission and is quickly ensnared in an intricate plot laid by powerful people pulling strings from the shadows. Upon failing to complete the assignment, he is forced to go on the run—from the government and rival assassin groups alike—as he seeks to unmask the players behind the conspiracy.
                                                     </p>
                                                     <div class="featured-movie-actions">
-                                                        <button class="btn-play-featured" onclick="openVideoModal()">
+                                                        <button class="btn-play-featured" id="playFeaturedBtn">
                                                             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                                                                 <polygon points="5 3 19 12 5 21 5 3"></polygon>
                                                             </svg>
