Checkpoint from VS Code for cloud agent session

--- a/index.html
+++ b/index.html
@@ -783,7 +783,9 @@
                         'modestbranding': 1,
                         'rel': 0,
                         'fs': 1,
-                        'playsinline': 1
+                        'playsinline': 1,
+                        // Ensure postMessage origin matches page origin
+                        'origin': window.location.origin
                     },
                     events: {
                         'onReady': onPlayerReady,
