fix: add Google Sign-In integration to registration page and update remember me checkbox

--- a/login.html
+++ b/login.html
@@ -317,7 +317,7 @@
                 
                 <div class="form-options">
                     <label class="form-checkbox">
-                        <input type="checkbox" name="remember">
+                        <input type="checkbox" id="remember" name="remember">
                         <span>Remember me</span>
                     </label>
                     <a href="#" class="form-link">Forgot Password?</a>
