feat: Implement user statistics and movie analytics endpoints in stats.js
feat: Add user preferences management and watch history functionality in users.js

feat: Create email service for sending various notifications and confirmations

feat: Develop service worker for caching and offline functionality in PWA

--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contact Us - Luganda Movies</title>
+    <title>Contact Us - Unruly Movies | Nduga Hafizu</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Contact Luganda Movies - Get in touch with our support team for help, feedback, or partnership inquiries.">
+    <meta name="description" content="Contact Unruly Movies - Get in touch with Nduga Hafizu for support, feedback, DMCA requests, or partnership inquiries.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#7CFC00">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Nduga Hafizu">
+    <link rel="canonical" href="https://watch.unrulymovies.com/contact.html">
     <meta name="google-adsense-account" content="ca-pub-1904736753681797">
+    
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "ContactPage",
+        "name": "Contact Unruly Movies",
+        "description": "Contact page for Unruly Movies - Luganda VJ Translation Platform",
+        "publisher": {
+            "@type": "Organization",
+            "name": "Unruly Movies",
+            "founder": "Nduga Hafizu"
+        }
+    }
+    </script>
     
     <link rel="shortcut icon" href="assets/images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
@@ -486,12 +504,14 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="footer-text my-3">
-                            <a href="privacy-policy.html" style="margin: 0 10px;">Privacy Policy</a> |
-                            <a href="terms.html" style="margin: 0 10px;">Terms of Service</a> |
-                            <a href="contact.html" style="margin: 0 10px;">Contact</a> |
-                            <a href="about.html" style="margin: 0 10px;">About Us</a>
+                            <a href="terms.html" style="margin: 0 10px;">Terms</a> |
+                            <a href="privacy.html" style="margin: 0 10px;">Privacy</a> |
+                            <a href="dmca.html" style="margin: 0 10px;">DMCA</a> |
+                            <a href="about.html" style="margin: 0 10px;">About</a> |
+                            <a href="contact.html" style="margin: 0 10px;">Contact</a>
                             <br><br>
-                            2025 Luganda Movies. All rights reserved.
+                            &copy; 2025 <strong>Unruly Movies</strong>. Developed by <strong>Nduga Hafizu</strong>.<br>
+                            <small style="color: #666;">Legitimate Ugandan platform for Luganda VJ translations.</small>
                         </div>
                     </div>
                 </div>
