Add movie seeder with 35+ movies, fix favicon, fix JWT defaults

--- a/dmca.html
+++ b/dmca.html
@@ -7,7 +7,9 @@
     <meta name="description" content="DMCA and Copyright Policy for Unruly Movies. We respect intellectual property rights and respond promptly to takedown requests.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://watch.unrulymovies.com/dmca.html">
-    <link rel="shortcut icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="apple-touch-icon" href="/assets/images/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
