--- a/index.html
+++ b/index.html
@@ -90,9 +90,13 @@
     }
     </script>
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png">
-    <link rel="apple-touch-icon" href="assets/images/icons/icon-192x192.png">
+    <!-- Favicon - Multiple formats for all browsers and search engines -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/logo.png">
+    <meta name="msapplication-TileImage" content="/assets/images/logo.png">
+    <meta name="msapplication-TileColor" content="#7CFC00">
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
@@ -419,7 +423,7 @@
                                             </div>
                                             <div class="featured-movie-content">
                                                 <div class="featured-movie-poster">
-                                                    <img src="https://image.tmdb.org/t/p/w500/gWt6vVKJYmYP7aqIkN7GqNnLq5K.jpg" alt="Song of the Assassins Poster">
+                                                    <img src="https://image.tmdb.org/t/p/w500/xXBnM6uSTk6qqCf0SRZKXcga9Ba.jpg" alt="Song of the Assassins Poster">
                                                     <div class="featured-quality-badge">HD</div>
                                                 </div>
                                                 <div class="featured-movie-info">
@@ -684,7 +688,7 @@
                                         <polygon points="5 3 19 12 5 21 5 3"></polygon>
                                     </svg>
                                 </div>
-                                <div class="media media-cover" style="background-image: url('https://image.tmdb.org/t/p/w500/9yxep7oJdkj3PLA3XRz0oJd9XnY.jpg');"></div>
+                                <div class="media media-cover" style="background-image: url('https://image.tmdb.org/t/p/w500/49WJfeN0moxb9IPfGn8AIqMGskD.jpg');"></div>
                             </a>
                             <div class="list-caption">
                                 <a href="#" class="list-title">Stranger Things</a>
