--- a/player.html
+++ b/player.html
@@ -19,7 +19,9 @@
     <meta property="og:image" content="">
     <meta property="og:url" content="">
     
-    <link rel="shortcut icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="apple-touch-icon" href="/assets/images/logo.png">
     <link rel="apple-touch-icon" href="assets/images/icons/icon-192x192.png">
     <link rel="manifest" href="manifest.json">
     
