--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Privacy Policy for Unruly Movies - How we collect, use, and protect your data. GDPR compliant.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://watch.unrulymovies.com/privacy.html">
-    <link rel="shortcut icon" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="apple-touch-icon" href="/assets/images/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
